<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.jwhh.notekeeper.NoteActivity">
    <item
        android:id="@+id/action_previous"
        android:icon="@drawable/ic_previous_clear"
        android:orderInCategory="100"
        android:title="Previous"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_send_mail"
        android:orderInCategory="101"
        android:title="Send as Email"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_next"
        android:icon="@drawable/ic_next_clear"
        android:orderInCategory="101"
        android:title="Next"

        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/action_cancel"
        android:icon="@android:drawable/ic_menu_revert"
        android:orderInCategory="102"
        android:title="@android:string/cancel"
        app:showAsAction="ifRoom|withText" />
    <item
        android:id="@+id/item_reminder"
        android:icon="@drawable/ic_reminder"
        android:orderInCategory="103"
        android:title="Set reminder"
        app:showAsAction="ifRoom" />
</menu>
