package com.jwhh.notekeeper;


import android.view.View;
import android.view.ViewGroup;
import android.view.ViewParent;

import androidx.test.espresso.ViewInteraction;
import androidx.test.filters.LargeTest;
import androidx.test.rule.ActivityTestRule;
import androidx.test.runner.AndroidJUnit4;

import org.hamcrest.Description;
import org.hamcrest.Matcher;
import org.hamcrest.TypeSafeMatcher;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;

import static androidx.test.espresso.Espresso.onView;
import static androidx.test.espresso.Espresso.pressBack;
import static androidx.test.espresso.action.ViewActions.click;
import static androidx.test.espresso.matcher.ViewMatchers.isDisplayed;
import static androidx.test.espresso.matcher.ViewMatchers.withClassName;
import static androidx.test.espresso.matcher.ViewMatchers.withContentDescription;
import static androidx.test.espresso.matcher.ViewMatchers.withId;
import static org.hamcrest.Matchers.allOf;
import static org.hamcrest.Matchers.is;

@LargeTest
@RunWith(AndroidJUnit4.class)
public class MainActivityTest {

	@Rule
	public ActivityTestRule<MainActivity> mActivityTestRule = new ActivityTestRule<>(MainActivity.class);

	@Test
	public void mainActivityTest() {
		ViewInteraction appCompatImageButton = onView(
				allOf(withContentDescription("Open navigation drawer"),
						childAtPosition(
								allOf(withId(R.id.toolbar),
										childAtPosition(
												withClassName(is("com.google.android.material.appbar.AppBarLayout")),
												0)),
								1),
						isDisplayed()));
		appCompatImageButton.perform(click());

		ViewInteraction navigationMenuItemView = onView(
				allOf(childAtPosition(
						allOf(withId(R.id.design_navigation_view),
								childAtPosition(
										withId(R.id.nav_view),
										0)),
						1),
						isDisplayed()));
		navigationMenuItemView.perform(click());

		ViewInteraction frameLayout = onView(
				allOf(childAtPosition(
						allOf(withId(R.id.list_items),
								childAtPosition(
										withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
										0)),
						0),
						isDisplayed()));
		frameLayout.perform(click());

		ViewInteraction actionMenuItemView = onView(
				allOf(withId(R.id.action_next), withContentDescription("Next"),
						childAtPosition(
								childAtPosition(
										withId(R.id.toolbar),
										1),
								0),
						isDisplayed()));
		actionMenuItemView.perform(click());

		ViewInteraction actionMenuItemView2 = onView(
				allOf(withId(R.id.action_previous), withContentDescription("Previous"),
						childAtPosition(
								childAtPosition(
										withId(R.id.toolbar),
										1),
								0),
						isDisplayed()));
		actionMenuItemView2.perform(click());

		ViewInteraction actionMenuItemView3 = onView(
				allOf(withId(R.id.action_cancel), withContentDescription("Cancel"),
						childAtPosition(
								childAtPosition(
										withId(R.id.toolbar),
										1),
								1),
						isDisplayed()));
		actionMenuItemView3.perform(click());

		ViewInteraction frameLayout2 = onView(
				allOf(childAtPosition(
						allOf(withId(R.id.list_items),
								childAtPosition(
										withClassName(is("androidx.constraintlayout.widget.ConstraintLayout")),
										0)),
						5),
						isDisplayed()));
		frameLayout2.perform(click());

		ViewInteraction actionMenuItemView4 = onView(
				allOf(withId(R.id.action_next), withContentDescription("Next"),
						childAtPosition(
								childAtPosition(
										withId(R.id.toolbar),
										1),
								1),
						isDisplayed()));
		actionMenuItemView4.perform(click());

		pressBack();
	}

	private static Matcher<View> childAtPosition(
			final Matcher<View> parentMatcher, final int position) {

		return new TypeSafeMatcher<View>() {
			@Override
			public void describeTo(Description description) {
				description.appendText("Child at position " + position + " in parent ");
				parentMatcher.describeTo(description);
			}

			@Override
			public boolean matchesSafely(View view) {
				ViewParent parent = view.getParent();
				return parent instanceof ViewGroup && parentMatcher.matches(parent)
						&& view.equals(((ViewGroup) parent).getChildAt(position));
			}
		};
	}
}
